# agentic-perf

./: .gitignore  AGENTS.md  README.md  cli.py  paths.py  pyproject.toml
agents/: base.py  jumpstarter_mcp.py  mcp_client.py  server_utils.py  stub.py
docs/: adding-a-harness.md  architecture.md  cli-reference.md  collaborative-negotiation.md  configuration.md  jira-polling-integration.md  monitoring.md  multi-user.md  next-session-notes.md  web-ui.md
orchestrator/: config.py  dispatcher.py  handoff.py  main.py  poller.py
providers/: cost.py  events.py  fleet.py  quads.py  ssh.py  telemetry.py
sample-private-skills/: crucible.json  zathras.json
scripts/: setup-jumpstarter.sh  start-bg.sh
state_store/: main.py  models.py  store.py
tests/: conftest.py  test_agent_iterations.py  test_benchmark_tools.py  test_boot_time.py  test_budget_guardrails.py  test_command_approval.py  test_cost_estimation.py  test_crucible_provider.py  test_dashboard_auth.py  test_execute_command.py  test_execution_plan.py  test_fleet_investigation.py  test_gathering_context.py  test_gemini_provider.py  test_handoff.py  test_infra_mcp.py  test_introspection.py  test_investigation_horreum.py  test_investigation_ledger.py  test_investigation_records.py  test_investigation_tools.py  test_jumpstarter_mcp.py  test_jumpstarter_provider.py  test_mcp_network_transport.py  test_multi_provider.py  test_provisioning_tools.py  test_quads_live.py  test_resource_providers.py  test_retrospective.py  test_secrets_cascade.py  test_state_machine.py  test_synthesis_agent.py  test_telemetry.py  (+4 more)
tui/: Makefile  (+2 more)
(+110 files in other folders)
